fixed styles + css// still need to change cast images style, so it doesn't depend on width of actual photo for spacing

--- a/static/style.css
+++ b/static/style.css
@@ -33,11 +33,22 @@ body{
 	margin: 15px 0;
 	padding: 20px;
 }
-.casting img{
-	height: 60px;
-	width: 60px;
+
+.rating img{
+	object-fit: img;
+	height: 65px;
+	width: 65px;
 	margin-right: 10px;
 	cursor: pointer;
+	margin-bottom: 10px;
+}
+
+.casting img{
+	cursor: pointer;
+	height: 100px;
+	width: auto;
+
+	
 }
 
 .left-box a {
